--- a/fullMERN/ProductManager/client/src/App.css
+++ b/fullMERN/ProductManager/client/src/App.css
@@ -6,6 +6,10 @@ h1 {
   color: #A2E3C4;
 }
 
+h2, h3 {
+  color: #3C493F;
+}
+
 .formInput {
   background-color: #F0F7F4;
   padding: 30px;
@@ -15,7 +19,7 @@ h1 {
 }
 
 input {
-  padding: 10px 5px;
+  padding: 15px 10px;
   border: 1px solid #7E8D85;
   border-radius: 5px;
   margin: 0 20px;
